:lipstick: Fix test for broswer url bar hiding element on mobile

--- a/app/Components/Modal/modal.module.css
+++ b/app/Components/Modal/modal.module.css
@@ -13,8 +13,8 @@
   margin: auto;
   padding: var(--48px);
   position: fixed;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 .modal_image_container {
